<resources>
    <string name="app_name">XmlLayout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="name">John Doe</string>
    <string name="title">Software Engineer</string>
    <string name="message">MESSAGE</string>
    <string name="follow">FOLLOW</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
</resources>